--- a/arch/arm/boot/dts/qcom/msm8226-mdss-panels.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8226-mdss-panels.dtsi
@@ -19,3 +19,5 @@
 #include "dsi-panel-jdi-1080p-video.dtsi"
 #include "dsi-panel-nt35590-qvga-cmd.dtsi"
 #include "dsi-panel-auo-qvga-cmd.dtsi"
+#include "dsi-panel-auo-720p-video.dtsi"
+#include "dsi-panel-sharp-R69431-720p-video.dtsi"
