--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1,3 +1,4 @@
+
 if ARCH_MSM
 
 menu "MSM SoC Type"
@@ -978,6 +979,15 @@ config KRAIT_REGULATOR
 	 line from the PMIC. This supply line is powered by multiple
 	 regulators running in ganged mode inside the PMIC. Enable
 	 this option to support such configurations.
+
+config XIAOMI_ARMANI_DTB
+	depends on ARCH_MSM8226
+	default n
+	bool "Xiaomi Armani Device DTBs"
+	help
+	 Only include Xiaomi Armani specific DTBs to limit the number that
+	 get built during kernel compilation.
+endif
 
 config MSM_PP2S_FEMTO
 	bool "FSM99XX PP2S Interrupt Notification"
