armani_defconfig: add unmet dependencies
Signed-off-by: rupansh <rupanshsekar@hotmail.com>

--- a/arch/arm/configs/cyanogenmod_armani_defconfig
+++ b/arch/arm/configs/cyanogenmod_armani_defconfig
@@ -308,6 +308,7 @@ CONFIG_MMU=y
 # CONFIG_ARCH_PNX4008 is not set
 # CONFIG_ARCH_PXA is not set
 CONFIG_ARCH_MSM=y
+CONFIG_MSM_SMD=y
 # CONFIG_ARCH_SHMOBILE is not set
 # CONFIG_ARCH_RPC is not set
 # CONFIG_ARCH_SA1100 is not set
@@ -352,6 +353,7 @@ CONFIG_ARCH_MSM=y
 # CONFIG_ARCH_MSMKRYPTON is not set
 # CONFIG_ARCH_MSM8610 is not set
 CONFIG_ARCH_MSM8226=y
+CONFIG_ARCH_MSM_KRAIT=y
 # CONFIG_ARCH_MSMSAMARIUM is not set
 CONFIG_MSM_SOC_REV_NONE=y
 # CONFIG_MSM_SOC_REV_A is not set
@@ -2700,6 +2702,7 @@ CONFIG_USB_ARCH_HAS_EHCI=y
 # CONFIG_USB_ARCH_HAS_XHCI is not set
 CONFIG_USB_SUPPORT=y
 CONFIG_USB_COMMON=y
+CONFIG_USB_PHY=y
 CONFIG_USB_ARCH_HAS_HCD=y
 CONFIG_USB=y
 # CONFIG_USB_DEBUG is not set
